# dummy-bank

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
api/: dependencies.py  exception_handlers.py  exceptions.py  main.py  models.py  settings.py
api/account/: router.py
api/accounts/: router.py
api/adresses/: router.py
api/customer/: router.py
api/customers/: router.py
api/models/: payloads.py  queries.py  responses.py
domain/: __init__.py  account.py  address.py  customer.py
lib/authentication/: __init__.py  query_param_auth.py
lib/geolocation_client/: __init__.py  google_maps_client.py
lib/http_client/: __init__.py
migrations/: env.py
migrations/versions/: 2e71f412a558_initial.py
repository/: __init__.py  accounts_repository.py  addresses_repository.py  customer_repository.py  db_account.py  db_address.py  db_customer.py  repository.py  search_condition.py
src/dummy_bank/api/: dependencies.py  lock_manager.py  main.py  settings.py
src/dummy_bank/api/accounts/: router.py
src/dummy_bank/api/adresses/: router.py
src/dummy_bank/api/customers/: router.py
src/dummy_bank/api/models/: __init__.py  payloads.py
src/dummy_bank/domain/: account.py  customer.py
src/dummy_bank/lib/geolocation_client/: __init__.py  geolocation_protocol.py  google_maps_client.py
src/dummy_bank/lib/geolocation_client/models/: __init__.py  coordinates.py
src/dummy_bank/lib/http_client/: http_client.py
src/dummy_bank/migrations/: env.py
src/dummy_bank/migrations/versions/: 2e71f412a558_initial.py
src/dummy_bank/repository/: accounts_repository.py  addresses_repository.py  customer_repository.py  db_account.py  db_address.py  repository.py  search_condition.py
tests/: conftest.py  make_domain_objects.py  test_lock_manager.py
tests/api/: test_dependencies.py
tests/api/account/: test_create_account.py  test_decrease_balance.py  test_increase_balance.py  test_list_account.py  test_transfer_balance.py
tests/api/addresses/: test_create_address.py  test_list_address.py  test_update_address.py
tests/api/customer/: test_create_customer.py  test_get_customer.py  test_list_customer.py  test_update_customer.py
tests/domain/: test_account.py  test_address.py  test_customer.py
tests/lib/authentication/: test_query_param_auth.py
tests/lib/geolocation_client/: test_google_maps_client.py
tests/lib/http_client/: test_http_client.py
tests/repository/: test_account_repository.py  test_addresses_repository.py  test_customer_repository.py  test_repository.py
