[tool.poetry]
name = "dummy-bank"
version = "0.0.1"
description = ""
authors = ["Rumee Ahmed <rumeeahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.41" }
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
pyjwt = "^2.10.1"
structlog = "^25.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.0"
ruff = "^0.12.4"
psycopg2 = "^2.9.10"
pytest-postgresql = "^6.1.1"
bandit = "^1.8.6"
coverage = "^7.9.2"
pytest-asyncio = "^0.26.0"
alembic = "^1.16.4"
freezegun = "^1.5.3"
pytest-httpx = "^0.35.0"
python-dotenv = "^1.1.1"


[tool.mypy]
exclude = ["__pycache__", ".pytest_cache", ".ruff_cache", "scratch"]
disallow_untyped_defs = true
disable_error_code = "type-abstract"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
explicit_package_bases = true


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = ["wip", "integration"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"


[tool.pytest]
env_files = ".env"


[tool.ruff.lint]
extend-select = ["I", "F401"]


[tool.coverage.run]
omit = [
  ".*",
  "*/site-packages/*",
  "*/tests/*",
  "*/conftest.py",
  "__init__.py",
  "*/settings.py",
]


[tool.coverage.report]
fail_under = 100
exclude_also = ["if __name__ == .__main__.:"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if TYPE_CHECKING",
    "\\.\\.\\.",  # This excludes lines with just ellipsis (...)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
